# soffosai-python

./: CHANGELOG.MD  DEPRECATIONS.MD  Epidemiology.docx  LICENSE  README.MD  apikey.py  file_ingest.py  my_pipe.py  output.txt  ppp.py  pyproject.toml  req.py  setup.py  tagged.py  temp_test.py  test.py  test2.py  test_ambiguity_detection.py  test_answer_scoring.py  test_contradiction_detection.py  test_documents.py  test_fileconverter.py  test_pipeline.py  to_andreas.json
coding_helpers/: create_set_pipeline_input_on_services.py
coding_helpers/services_with_set_pipeline_input/: ambiguity_detection.py  answer_scoring.py  contradiction_detection.py  documents.py  email_analysis.py  emotion_detection.py  file_converter.py  language_detection.py  lets_discuss.py  logical_error_detection.py  microlesson.py  named_entity_recognition.py  paraphrase.py  profanity.py  qna_generation.py  question_answering.py  review_tagger.py  sentiment_analysis.py  simplify.py  summarization.py  table_generator.py  tag_generation.py  transcript_correction.py
samples/: Epidemiology.docx  node.py
samples/pipelines/: document_summary.py  file_summary.py  subclass_pipeline.py
samples/services/: answer_scoring.py  assessment_generator.py  chatbot.py  contradiction_detection.py  discuss.py  documents.py  email_analysis.py  emotion_detection.py  file_converter.py  image_analysis.py  image_generation.py  language_detection.py  lets_discuss.py  logical_error_detection.py  microlesson.py  multiple_choice_qn_a_generator.py  named_entity_recognition.py  paraphrase.py  profanity.py  qn_a_generation.py  question_answering.py  review_tagger.py  sentiment_analysis.py  simplify.py  summarization.py  table_generator.py  tag_generation.py  transcript_correction.py  translation.py
soffos/: __init__.py
soffos/client/: __init__.py  ai_response.py  clients.py  http_client.py  soffos.py
soffos/common/: constants.py  service_io_map.py
soffos_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
soffosai/: __init__.py
soffosai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: soffos.py
tests/: my_pipe.py  node.py  pipeline.py  service.py  service_call_samples.py
(+264 files in other folders)
