[project]
name = "soffos"
version = "0.0.1"
authors = [
  { name="Franco Such", email="franco.such@Soffos.ai" },
  { name="Andreas Christofi", email="andreas.christofi@Soffos.ai" }
]
description = "Python SDK to access Soffos AI's API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Soffos Ltd License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://platform.soffos.ai"
"Bug Tracker" = "https://platform.soffos.ai/contact"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
http3 = "^0.6.7"