[project]
name = "soffos_ai"
version = "0.0.1"
authors = [
  { name="Franco Such", email="franco.such@Soffos.ai" },
  { name="Andreas Christofi", email="andreas.christofi@Soffos.ai" }
]
description = "Python SDK for Soffos AI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Soffos-Inc/soffos_ai"
"Bug Tracker" = "https://github.com/Soffos-Inc/soffos_ai/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
http3 = "^0.6.7"