[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel >= 0.36.2",
]

[project]
name = "soffosai"
version = "0.0.3"
authors = [
  { name="Franco Such", email="franco.such@Soffos.ai" },
  { name="Andreas Christofi", email="andreas.christofi@Soffos.ai" }
]
description = "Python SDK for Soffos AI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "http3"]


[project.urls]
"Homepage" = "https://github.com/Soffos-Inc/soffos_ai"
"Bug Tracker" = "https://github.com/Soffos-Inc/soffos_ai/issues"
